--- a/index.html
+++ b/index.html
@@ -14,43 +14,43 @@
         <!-- 10以内 -->
         <div class="card">
             <h2>🎯 10以内</h2>
-            <a href="/10/Add.html"><button class="btn">➕ 加法飞船</button></a>
-            <a href="/10/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
-            <a href="/10/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
+            <a href="10/Add.html"><button class="btn">➕ 加法飞船</button></a>
+            <a href="10/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
+            <a href="10/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
         </div>
 
         <!-- 20以内 -->
         <div class="card">
             <h2>🚀 20以内</h2>
-            <a href="/20/Add.html"><button class="btn">➕ 加法飞船</button></a>
-            <a href="/20/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
-            <a href="/20/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
+            <a href="20/Add.html"><button class="btn">➕ 加法飞船</button></a>
+            <a href="20/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
+            <a href="20/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
         </div>
 
         <!-- 两位数 -->
         <div class="card">
             <h2>💫 两位数</h2>
-            <a href="/two/Add.html"><button class="btn">➕ 加法飞船</button></a>
-            <a href="/two/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
-            <a href="/two/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
+            <a href="two/Add.html"><button class="btn">➕ 加法飞船</button></a>
+            <a href="two/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
+            <a href="two/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
         </div>
 
         <!-- 巧算 -->
         <div class="card">
             <h2>✨ 巧算屋</h2>
-            <a href="/qs/Add.html"><button class="btn">➕ 连加魔法</button></a>
-            <a href="/qs/Minus.html"><button class="btn">➖ 连减咒语</button></a>
-            <a href="/qs/Add&Minus.html"><button class="btn">🪄 急急如律令</button></a>
+            <a href="qs/Add.html"><button class="btn">➕ 连加魔法</button></a>
+            <a href="qs/Minus.html"><button class="btn">➖ 连减咒语</button></a>
+            <a href="qs/Add&Minus.html"><button class="btn">🪄 急急如律令</button></a>
         </div>
 
         <!-- 表内乘除法 -->
         <div class="card">
             <h2>🪐 小九九</h2>
-            <a href="/99/5Cheng.html"><button class="btn">❌ 初级魔法</button></a>
-            <a href="/99/5Chu.html"><button class="btn">➗ 初级咒语</button></a>
-            <a href="/99/9Cheng.html"><button class="btn">❌ 中级魔法</button></a>
-            <a href="/99/9Chu.html"><button class="btn">➗ 中级咒语</button></a>
-            <a href="/99/99Table.html"><button class="btn">🧙 大魔法师</button></a>
+            <a href="99/5Cheng.html"><button class="btn">❌ 初级魔法</button></a>
+            <a href="99/5Chu.html"><button class="btn">➗ 初级咒语</button></a>
+            <a href="99/9Cheng.html"><button class="btn">❌ 中级魔法</button></a>
+            <a href="99/9Chu.html"><button class="btn">➗ 中级咒语</button></a>
+            <a href="99/99Table.html"><button class="btn">🧙 大魔法师</button></a>
         </div>        
 
         <!-- 广告 -->
