--- a/99/99Table.html
+++ b/99/99Table.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="header">
-        <div id="timer">剩余时间：60秒</div>
+        <div id="timer">剩余：60秒</div>
         <div id="score">答对：0题</div>
     </div>
     <!-- 开始按钮 -->
