增加标签页上的其他功能

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>计算能力训练</title>
+    <title>🔢数学能力训练</title>
     <!-- 引入外部 CSS 文件 -->
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="nav-placeholder"></div>
+
     <div class="container">
-        <h1 class="header">🔢数学大冒险</h1>
-        
+              
         <!-- 10以内 -->
         <div class="card">
             <h2>🎯 10以内</h2>
-            <a href="10/Add.html"><button class="btn">➕ 加法飞船</button></a>
+            <a href="10/Add.html"><button class="btn">➕ 加法飞船</button></a> 
             <a href="10/Minus.html"><button class="btn">➖ 减法滑梯</button></a>
             <a href="10/Add&Minus.html"><button class="btn">🧮 加减算盘</button></a>
         </div>
@@ -63,5 +65,6 @@
             -->
         </div>
     </div>
+    <script src="common.js"></script>
 </body>
 </html>
