修改title,统一样式

--- a/10/Add.html
+++ b/10/Add.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>10以内加法</title>
+    <title>速算挑战-10以内加法</title>
     <link rel="stylesheet" href="../common.css"> 
 </head>
 
@@ -73,7 +73,7 @@
             });
             app.problems.appendChild(fragment);
         }
-
+        
         // 初始化页面
         function init() {
             initProblems();
