--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔢数学能力训练</title>
+    <title>数学能力训练-速算挑战</title>
     <!-- 引入外部 CSS 文件 -->
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="styles.css">
