--- a/20/Add&Minus.html
+++ b/20/Add&Minus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>20以内加减法</title>
+    <title>速算挑战-20以内加减法</title>
     <link rel="stylesheet" href="../common.css"> 
 </head>
 
