--- a/99/9Cheng.html
+++ b/99/9Cheng.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>6到9表内乘法</title>
+    <title>速算挑战-6到9表内乘法</title>
     <link rel="stylesheet" href="../common.css"> 
 </head>
 
