--- a/formula-inference.html
+++ b/formula-inference.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>公式推理</title>
+    <title>数学能力训练-公式推理</title>
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -35,8 +35,7 @@
     <div id="nav-placeholder"></div>
     <div class="container">
         <div class="mindmap-node">
-            <h3>建设中</h3>
-            <p>相关内容正在努力建设中，敬请期待</p>
+            <h3>努力建设中，敬请期待</h3>
         </div>
     </div>
     <script>
