修改关注我视频

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- 广告 -->
         <div class="card">
             <h2>🌈 关注我</h2>
-            <a href="https://v.douyin.com/i5mENRpd/ y@T.YZ LWZ:/ 06/16/"><button class="btn">🎵 抖音 </button></a>
+            <a href="https://v.douyin.com/i5WRVKpU/ 09/18 i@C.hB Ok:/"><button class="btn">🎵 抖音 </button></a>
             <!-- 
             <a href="https://v.kuaishou.com/qKN2Aq"><button class="btn">🎥 快手 </button></a>
             <a href="http://xhslink.com/a/3aQxzNC3JYa7"><button class="btn">📕 小红书 </button></a>
