增加视频链接

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li class="nav-item" data-target="formula">公式推导</li>
                 <li class="nav-item" data-target="common">常见题型</li>
                 <!--
-                <li class="nav-item" data-target="topic-mastery">专题突破</li>
-                <li class="nav-item" data-target="past-papers-bank">真题库</li>  
+                <li class="nav-item" data-target="topic-mastery">AI专题训练</li>
+                <li class="nav-item" data-target="past-papers-bank">真题库</li>
                 <li class="nav-item" data-target="error-notebook">错题本</li>
                 -->   
             </ul>
@@ -255,7 +255,7 @@
                             <div class="accordion-item">
                                 <h3 class="accordion-header">单位换算 <span class="arrow">▶</span>
                                     <!-- 新增可点击的emoji图标 -->
-                                    <a href="https://v.douyin.com/SOQnJHx2ZP4/ a@a.NJ 10/10 mQ:/" target="_blank" style="margin-left: 10px;display: none;text-decoration: none;"class="toggle-icon">🎦</a>
+                                    <a href="https://v.douyin.com/SOQnJHx2ZP4" target="_blank" style="margin-left: 10px;display: none;text-decoration: none;"class="toggle-icon">🎦</a>
                                 </h3>
                                 <div class="accordion-content">
                                     <div class="card">
@@ -495,30 +495,36 @@
                                                 </div>
                                             </div>
                                         </button>
-                                        <button class="btn vertical-layout">
-                                            <div class="btn-content">
-                                                <div class="text-group">
-                                                    <div class="main-text">中位数：</div>
-                                                    <div class="sub-text">一组数据，按大小顺序排列后，处于中间位置的数值</div>
+                                        <a href="https://v.douyin.com/6FrNzoFTaD8" target="_blank"  style="text-decoration: none;">
+                                            <button class="btn vertical-layout">
+                                                <div class="btn-content">
+                                                    <div class="text-group">
+                                                        <div class="main-text">🎦中位数：</div>
+                                                        <div class="sub-text">一组数据，按大小顺序排列后，处于中间位置的数值</div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </button>
-                                        <button class="btn vertical-layout">
-                                            <div class="btn-content">
-                                                <div class="text-group">
-                                                    <div class="main-text">众数：</div>
-                                                    <div class="sub-text">一组数据中，出现次数最多的数值</div>
+                                            </button>
+                                        </a>
+                                        <a href="https://v.douyin.com/14vLg4blLFM" target="_blank"  style="text-decoration: none;">
+                                            <button class="btn vertical-layout">
+                                                <div class="btn-content">
+                                                    <div class="text-group">
+                                                        <div class="main-text">🎦众数：</div>
+                                                        <div class="sub-text">一组数据中，出现次数最多的数值</div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </button>
-                                        <button class="btn vertical-layout">
-                                            <div class="btn-content">
-                                                <div class="text-group">
-                                                    <div class="main-text">极差：</div>
-                                                    <div class="sub-text">一组数据中，最大值减最小值的差</div>
+                                            </button>
+                                        </a>
+                                        <a href="https://v.douyin.com/mHNpJquH_i4" target="_blank"  style="text-decoration: none;">
+                                            <button class="btn vertical-layout">
+                                                <div class="btn-content">
+                                                    <div class="text-group">
+                                                        <div class="main-text">🎦极差：</div>
+                                                        <div class="sub-text">一组数据中，最大值减最小值的差</div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </button>
+                                            </button>
+                                        </a>
                                     </div>
                                     <div class="card">
                                         <h2>概率</h2>
