--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                                                 </div>
                                             </div>
                                         </button>
-                                        <a href="https://v.douyin.com/xt689p1qGyo" target="_blank"  style="text-decoration: none;">
+                                        <a href="https://v.douyin.com/8514KhJyp0c" target="_blank"  style="text-decoration: none;">
                                             <button class="btn vertical-layout">
                                                 <div class="btn-content">
                                                     <div class="text-group">
