--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-items">
                 <li class="nav-item active" data-target="quick-calc">速算挑战</li>
                 <li class="nav-item" data-target="formula">公式推导</li>
-                <li class="nav-item" data-target="common">常见题型</li>
+                <li class="nav-item" data-target="common">AI陪练(构思中)</li>
                 <!--
                 <li class="nav-item" data-target="topic-mastery">AI专题训练</li>
                 <li class="nav-item" data-target="past-papers-bank">真题库</li>
@@ -636,10 +636,64 @@
                         <div class="accordion">
                             <!-- 几何图形 -->
                             <div class="accordion-item">
-                                <h3 class="accordion-header">建设中<span class="arrow">▶</span></h3>
+                                <h3 class="accordion-header">几何基础<span class="arrow">▶</span></h3>
                                 <div class="accordion-content">
                                     <div class="btn-group">
-                                        <button class="btn">敬请期待</button>
+                                        <button class="btn">平面图形</button>
+                                        <button class="btn">立体图形</button>
+                                        <button class="btn">切割图形</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 趣味问题 -->
+                            <div class="accordion-item">
+                                <h3 class="accordion-header">趣味问题<span class="arrow">▶</span></h3>
+                                <div class="accordion-content">
+                                    <div class="btn-group">
+                                        <button class="btn">老鹰抓小鸡</button>
+                                        <button class="btn">吹蜡烛</button>
+                                        <button class="btn">吃苹果</button>
+                                        <button class="btn">做错题</button>
+                                        <button class="btn">火柴棒图形</button>
+                                        <button class="btn">火柴棒算式</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 应用题 -->
+                            <div class="accordion-item">
+                                <h3 class="accordion-header">应用题<span class="arrow">▶</span></h3>
+                                <div class="accordion-content">
+                                    <div class="btn-group">
+                                        <button class="btn">排队问题</button>
+                                        <button class="btn">平均分配</button>
+                                        <button class="btn">结果不变</button>
+                                        <button class="btn">间隔问题</button>
+                                        <button class="btn">年龄问题</button>
+                                        <button class="btn">等价转换</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 找规律 -->
+                            <div class="accordion-item">
+                                <h3 class="accordion-header">找规律<span class="arrow">▶</span></h3>
+                                <div class="accordion-content">
+                                    <div class="btn-group">
+                                        <button class="btn">数字</button>
+                                        <button class="btn">图形</button>
+                                        <button class="btn">数图结合</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 计算能力 -->
+                            <div class="accordion-item">
+                                <h3 class="accordion-header">计算能力<span class="arrow">▶</span></h3>
+                                <div class="accordion-content">
+                                    <div class="btn-group">
+                                        <button class="btn">单双数</button>
+                                        <button class="btn">计算技巧</button>
+                                        <button class="btn">竖式计算</button>
+                                        <button class="btn">填数字、填符号</button>
+                                        <button class="btn">数字推理</button>
                                     </div>
                                 </div>
                             </div>
