--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>杨杨自习室</title>
+    <title>飞杨AI自习室</title>
     <link rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="katex/katex.min.css">
 </head>
